syntax = "proto3";

message User {
  string id = 1;
  string email = 2;
  string role = 3;
  string status = 4;
  string createdAt = 5;
  bytes emailHash = 6;
  bytes signature = 7;
}

message UserList {
  repeated User users = 1;
}